[package]
name = "midi_control"
version = "0.1.0"
authors = ["gwatcha <michael.ampm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
arr_macro = "0.1.3"
time = "0.1"

[lib]
name = "midi_control"
crate-type = ["cdylib"]
